# telecom-churn-prediction

./: .gitignore  Dockerfile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt
artifacts/: evaluation_metrics.json  feature_names.json  selected_threshold.json  trained_model.joblib
notebooks/: 01_eda.ipynb  02_model_experiments.ipynb  03_shap_analysis.ipynb
reports/: evaluation_report.md
reports/assignment_answers/: section_a_answers.md  section_b_answers.md  section_c_answers.md
scripts/: evaluate_model.py  export_artifacts.py  smoke_test.py  train_model.py
src/telecom_churn_prediction/: constants.py  exceptions.py  logger.py  settings.py
src/telecom_churn_prediction/api/: application.py  dependencies.py  error_handlers.py  middleware.py  routes.py  schemas.py
src/telecom_churn_prediction/data/: data_loader.py  data_splitter.py  data_validator.py
src/telecom_churn_prediction/explainability/: explanation_formatter.py  lime_explainer.py  shap_explainer.py
src/telecom_churn_prediction/ml/: evaluation.py  feature_engineering.py  hyperparameter_tuning.py  (+6 more)
tests/: conftest.py
tests/api/: test_error_handlers.py  test_health_endpoint.py  test_predict_endpoint.py
tests/unit/: test_data_loader.py  test_data_splitter.py  test_data_validator.py  test_evaluation.py  test_explanation_formatter.py  test_feature_engineering.py  test_metrics.py  test_model_factory.py  test_model_loader.py  test_prediction_service.py  test_preprocessing.py  test_threshold_optimization.py  test_train_pipeline.py  test_train_pipeline_artifacts.py
(+4 files in other folders)
