[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telecom-churn-prediction"
version = "0.1.0"
description = "Production-ready telecom churn prediction project for assignment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "imbalanced-learn>=0.12.0",
    "lightgbm>=4.3.0",
    "lime>=0.2.0.1",
    "xgboost>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "joblib>=1.4.0",
    "matplotlib>=3.8.0",
    "shap>=0.46.0",
    "prometheus-client>=0.20.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true